<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingHorizontal="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_detail_avatar_size"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="name"
                android:textSize="28sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="login"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="@dimen/user_detail_row_padding_vertical">

                <TextView
                    android:id="@+id/n_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="XX"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/user_detail_font_llarge"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_public_repos"
                    android:textSize="@dimen/user_detail_font_small"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="@dimen/user_detail_row_padding_vertical">

                <TextView
                    android:id="@+id/n_gists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="XX"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/user_detail_font_llarge"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_public_gists"
                    android:textSize="@dimen/user_detail_font_small"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="@dimen/user_detail_row_padding_vertical"
                android:background="@drawable/frame_style"
                android:backgroundTint="@color/frame">
                <TextView
                    android:id="@+id/n_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="XX"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/user_detail_font_llarge"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_following"
                    android:textSize="@dimen/user_detail_font_small"
                    android:gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    app:srcCompat="@android:drawable/arrow_down_float" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/followers_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="@dimen/user_detail_row_padding_vertical"
                android:background="@drawable/frame_style"
                android:backgroundTint="@color/frame">

                <TextView
                    android:id="@+id/n_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="XX"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/user_detail_font_llarge"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_followers"
                    android:textSize="@dimen/user_detail_font_small"
                    android:gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    app:srcCompat="@android:drawable/arrow_down_float" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/user_detail_row_padding_vertical"
            android:paddingHorizontal="@dimen/user_detail_row_padding_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textSize="@dimen/user_detail_font_large" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/user_detail_font_normal" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>


